--- a/XcapeApp/src/interfaz/IntGraficaGestionPerfil.form
+++ b/XcapeApp/src/interfaz/IntGraficaGestionPerfil.form
@@ -209,6 +209,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Actualizar"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonActualizarMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
