--- a/XcapeApp/src/interfaz/IntGraficaLogin.form
+++ b/XcapeApp/src/interfaz/IntGraficaLogin.form
@@ -95,6 +95,9 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="0" green="99" red="ff" type="rgb"/>
     </Property>
+    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+      <Color id="Cursor de Mano"/>
+    </Property>
     <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
@@ -206,7 +209,7 @@
                   <Component id="ImagenCerrar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabelFont" min="-2" pref="194" max="-2" attributes="0"/>
-                  <EmptySpace pref="316" max="32767" attributes="0"/>
+                  <EmptySpace pref="326" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -222,7 +225,7 @@
         <Component class="javax.swing.JLabel" name="ImagenCerrar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/X.png"/>
+              <Image iconType="3" name="/imagenes/cerrar.png"/>
             </Property>
           </Properties>
           <Events>
