--- a/XcapeApp/src/interfaz/IntGraficaPrincipal.form
+++ b/XcapeApp/src/interfaz/IntGraficaPrincipal.form
@@ -75,6 +75,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="REGISTER"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonRegisterMouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="257" y="373" width="-1" height="-1"/>
