--- a/XcapeApp/src/interfaz/IntGraficaGestionPerfil.form
+++ b/XcapeApp/src/interfaz/IntGraficaGestionPerfil.form
@@ -211,6 +211,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonActualizarMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonActualizarActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
