--- a/XcapeApp/src/interfaz/IntGraficaMenu.form
+++ b/XcapeApp/src/interfaz/IntGraficaMenu.form
@@ -56,12 +56,12 @@
               <Group type="102" alignment="1" attributes="0">
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="13" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jLabelSplitwise1" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabelValora1" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabelSplitwise1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabelValora1" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabelMedia" alignment="1" min="-2" pref="89" max="-2" attributes="0"/>
                               <Component id="jLabelSalir" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -188,6 +188,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelGestionPerfilMouseClicked"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelGestionPerfilMouseEntered"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelMedia">
@@ -308,12 +309,12 @@
         <Component class="javax.swing.JLabel" name="jLabelSplitwise1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/Splitwise.png"/>
+              <Image iconType="3" name="/imagenes/Alert.png"/>
             </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="jLabelSalir"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Splitwise"/>
+            <Property name="text" type="java.lang.String" value="Incidencias"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="verticalAlignment" type="int" value="3"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -323,6 +324,9 @@
             </Property>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelSplitwise1MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelValora1">
           <Properties>
@@ -342,6 +346,9 @@
             </Property>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelValora1MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelLogo">
           <Properties>
@@ -366,7 +373,7 @@
               <Font name="Lucida Grande" size="18" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="&quot;Bienvenido, &quot; +user.getNombre()+ &quot;!&quot;" type="code"/>
+              <Connection code="&quot;Bienvenido, &quot; +user.getCorreo()+ &quot;!&quot;" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
